--- a/views/posts.hbs
+++ b/views/posts.hbs
@@ -26,7 +26,7 @@
             <td><a href="/posts?category={{category}}">{{category}}</a></td>
             <td>{{published}}</td>
             <td>
-              <form action="/posts/delete/{{id}}" method="POST">
+              <form action="/posts/delete/{{id}}" method="GET">
                 <button type="submit" class="btn btn-danger">remove</button>
               </form>
             </td>
